--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
 
-add_executable(cpptoolkit-utest-example main.cpp)
+file(GLOB SOURCES "*.cpp")
+add_executable(cpptoolkit-utest-example ${SOURCES})
 target_link_libraries(cpptoolkit-utest-example cpptoolkit-utest)
 
