Update print tests result

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.05)
 
 project(cpptoolkit-test)
 
-option(INCLUDE_EXAMPLE "Build the example" OFF)
+option(INCLUDE_EXAMPLE "Build the example" ON)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
